force-app/main/default/objects/Membership__c/fields/Consecutive_Years_of_Membership__c.field-meta.xml
<CustomField>
    <fullName>Consecutive_Years_of_Membership__c</fullName>
    <description>This field displays the number of consecutive years that this membership has been active.</description>
    <label>Consecutive Years of Membership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>