force-app/main/default/objects/Membership__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>This field represents this membership's official expiration date.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>