force-app/main/default/objects/Membership__c/fields/Last_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Changed_Date__c</fullName>
    <description>This fields indicates when the membership record was last changed.</description>
    <label>Last Changed</label>
    <type>Date</type>
</CustomField>