force-app/main/default/objects/Membership__c/fields/Last_Dropped_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Dropped_Date__c</fullName>
    <description>This field indicates when the membership record was last dropped.</description>
    <label>Last Dropped</label>
    <type>Date</type>
</CustomField>