force-app/main/default/objects/Membership__c/fields/Last_Renewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Renewed_Date__c</fullName>
    <description>This field records when the membership was last renewed.</description>
    <label>Last Renewed</label>
    <type>Date</type>
</CustomField>