force-app/main/default/objects/Membership__c/fields/Membership_Categories__c.field-meta.xml
<CustomField>
    <fullName>Membership_Categories__c</fullName>
    <description>This field specifies the membership category containing this membership.</description>
    <label>Membership Categories</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Membership_Membership_Categories</valueSetName>
    </valueSet>
</CustomField>