force-app/main/default/objects/Membership__c/fields/Membership_Outstanding_Dues__c.field-meta.xml
<CustomField>
    <fullName>Membership_Outstanding_Dues__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field displays the currently outstanding dues on this membership</description>
    <label>Membership Outstanding Dues</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>