force-app/main/default/objects/Membership__c/fields/Membership_Program__c.field-meta.xml
<CustomField>
    <fullName>Membership_Program__c</fullName>
    <description>This field specifies the membership program containing this membership.</description>
    <label>Membership Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Membership_Membership_Programs</valueSetName>
    </valueSet>
</CustomField>