force-app/main/default/objects/Membership__c/fields/Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status__c</fullName>
    <description>This field displays the current status of the membership.</description>
    <label>Membership_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>