force-app/main/default/objects/Membership__c/fields/RE_ID__c.field-meta.xml
<CustomField>
    <fullName>RE_ID__c</fullName>
    <description>The Raiser&#39;s Edge ID associated with this membership record, if any.</description>
    <externalId>true</externalId>
    <label>Raiser&#39;s Edge ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>