force-app/main/default/objects/Membership__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>This field represents the start date of this membership (rather than when this membership record was created).</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>