force-app/main/default/objects/Membership__c/fields/Times_Renewed__c.field-meta.xml
<CustomField>
    <fullName>Times_Renewed__c</fullName>
    <description>This field holds the number of times the membership has been renewed.</description>
    <label>Times Renewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>