force-app/main/default/objects/Membership__c/fields/Total_Children__c.field-meta.xml
<CustomField>
    <fullName>Total_Children__c</fullName>
    <description>The number of children benefiting from this membership.</description>
    <label>Total Children</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>