force-app/main/default/objects/Membership__c/fields/Total_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Members__c</fullName>
    <description>The total number of members benefiting from this membership.</description>
    <label>Total Members</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>