force-app/main/default/objects/Membership__c/fields/Total_Years_of_Membership__c.field-meta.xml
<CustomField>
    <fullName>Total_Years_of_Membership__c</fullName>
    <description>The total number of years that this person has held a membership.</description>
    <label>Total Years of Membership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>